# car-prediction-render

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
notebooks/: exploration.ipynb
scripts/: start.sh
src/car_price/: __init__.py  api.py  config.py  predict.py  train.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_predict.py
